--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@types/colors": "^1.2.1",
     "@types/express": "^4.17.16",
+    "@types/http-errors": "^2.0.1",
     "@types/winston": "^2.4.4",
+    "http-errors": "^2.0.0",
     "joi": "^17.7.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
